<resources>
    <string name="app_name">Rosuber</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>
    <string name="nav_trip_title">My Trips</string>
    <string name="nav_find_trips_title">Find Trips</string>
    <string name="nav_profile_title">Profile</string>
    <string name="nav_home_title">Home</string>
    <string name="name_text_default">Your Name</string>
    <string name="contact_info_text_default">Contact Info</string>
    <string name="nav_about_title">About</string>
    <string name="nav_settings_title">Settings</string>
    <string name="homepage_title">Recent Trip</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_trip">ADD A TRIP</string>
    <string name="i_am_a_driver">I AM A DRIVER</string>
    <string name="i_am_a_passenger">I AM A PASSENGER</string>
    <string name="from">From:</string>
    <string name="from_hint">I want to be picked up at</string>
    <string name="to">To:</string>
    <string name="to_hint">I am going to</string>
    <string name="select_a_date">Select A Date\n(DDMMYY)</string>
    <string name="select_a_time">Select A Time</string>
    <string name="capacity">Capacity (Number of passengers): </string>
    <string name="suggested_price">Suggested Price Per Passenger ($)</string>
    <string name="price_hint">e.g. 20</string>

    <string name="login_with_rosefire">Login with Rosefire</string>
    <string name="login_error">Login Error!</string>
    <string name="image_intent_title">Select or Take a new Picture</string>
    <string name="phone_dialog_title">Enter Your PhoneNumber To Complete Your Information</string>
    <string name="imageButton_help_text">Click Above to Upload</string>
    <string name="time">Time:</string>
    <string name="origin">Origin:</string>
    <string name="destination">Destination:</string>
    <string name="driver">Driver:</string>
    <string name="passengers">Passengers:</string>
    <string name="price">Price:</string>

    <string name="update">UPDATE</string>
    <string name="dialog_edit_profile_title">Update Your Phone Number</string>
    <string name="trip_detail">Trip Detail</string>
    <string name="update_your_number">Update Your Number</string>
    <string name="edit_dialog_msg">You are only allowed to change your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="time_detail">Time:</string>
    <string name="origin_detail">Origin:</string>
    <string name="destination_detail">Destination:</string>
    <string name="driver_driver">Driver:</string>
    <string name="passengers_detail">Passengers:</string>
    <string name="price_detail">Price:</string>
    <string name="join_button">Join!</string>
    <string name="seats_left_detail">Seats Left:</string>

    <string name="leave">Leave Trip</string>
    <string name="action_search">Search</string>
    <string name="origin_required">Origin (Required)</string>
    <string name="desination_required">Desination (Required)</string>
    <string name="search_dialog_title">Search Trips</string>
    <string name="invalid_search_toast">Please enter both inputs</string>
    <string name="search_dialog_netural">SHOW ALL TRIPS</string>
    <string name="invalid_phone_number">Driver has not updated his/her phone number</string>
    <string name="invalid_email">Driver not found</string>
    <string name="edit_profile_submsg">If you want to upload a new profile picture, click on the image</string>
    <string name="edit_profile_dialog_title">Update Your Information</string>
    <string name="join_trip_dialog_title">Join This Trip As The Following Role</string>
    <string name="join_dialog_msg_full_trip">This trip is full! You can\'t join!</string>
    <string name="join_dialog_msg_full_trip_title">Sorry!</string>
    <string name="edit_a_trip">Update Trip</string>
    <string name="add">ADD</string>
    <string name="button_text_update">UPDATE</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_get_place_name_title">Search</string>
    <string name="leave_trip_dialog_msg">Are You Sure To Leave This Trip?</string>
    <string name="leave_trip_dialog_title">Leave Trip</string>
    <string name="yes">YES</string>
    <string name="button_add">ADD</string>
    <string name="button_leave_trip">LEAVE TRIP</string>
    <string name="button_cancel">CANCEL</string>
</resources>
