<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/nav_home_title"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_48dp"
            android:title="@string/nav_profile_title" />
        <item
            android:id="@+id/nav_trip_history"
            android:icon="@drawable/ic_assignment_black_48dp"
            android:title="@string/nav_trip_title"/>
        <item
            android:id="@+id/nav_find_trips"
            android:icon="@drawable/ic_local_taxi_black_48dp"
            android:title="@string/nav_find_trips_title" />

    </group>

    <group android:id="@+id/grp2"
           android:checkableBehavior="single">

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_48dp"
                android:title="@string/nav_about_title" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/nav_settings_title" />
    </group>

</menu>
