<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingPrefix"
    android:padding="15dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/isDriverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am_a_driver"
            fontPath="fonts/Philosopher-Bold.ttf"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/isDriverSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/isDriverTextView"
            android:layout_toEndOf="@+id/isDriverTextView"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/originTextView"
            android:layout_height="wrap_content"
            android:text="@string/from"
            fontPath="fonts/Philosopher-Bold.ttf"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_marginRight="15dp"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true" />

        <EditText
            android:id="@+id/orginEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/from_hint"
            android:inputType="textCapWords"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:minLines="1"
            android:maxLines="3"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/originTextView" />

        <ImageButton
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            app:srcCompat="@drawable/ic_add_location_black_24dp"
            android:background="@android:color/transparent"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/origin_image_button"
            android:scaleType="centerCrop"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="1">

        <ImageButton
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            app:srcCompat="@drawable/ic_add_location_black_24dp"
            android:background="@android:color/transparent"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/destination_image_button"
            android:scaleType="centerCrop"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/destEditText"
            android:layout_width="wrap_content"
            android:ems="10"
            android:hint="@string/to_hint"
            android:inputType="textCapWords"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:maxLines="3"
            android:minLines="1"
            android:layout_weight="0.96"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/destTextView" />

        <TextView
            android:id="@+id/destTextView"
            android:layout_height="wrap_content"
            android:text="@string/to"
            fontPath="fonts/Philosopher-Bold.ttf"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:layout_marginRight="15dp"
            android:layout_width="47dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_date"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:background="?attr/colorAccent"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:elevation="7dp"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:id="@+id/timeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_time"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:background="?attr/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginStart="50dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/dateButton"
            android:elevation="5dp"
            style="@style/Widget.AppCompat.Button.Borderless" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fontPath="fonts/Philosopher-Bold.ttf"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fontPath="fonts/Philosopher-Bold.ttf"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"

            android:layout_marginStart="70dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/dateTextView"
            android:layout_toEndOf="@+id/dateTextView" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/numTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capacity"
            fontPath="fonts/Philosopher-Bold.ttf"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <TextView
            android:text="0"
            android:id="@+id/capacityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp" />

    </RelativeLayout>

    <SeekBar
        android:layout_marginTop="20dp"
        android:id="@+id/seek_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5"
        android:progress="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggested_price"
            fontPath="fonts/Philosopher-Bold.ttf"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/price_hint"
            android:inputType="number" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">


        <Button
            android:text="@string/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/insert_trip_button"
            android:layout_toLeftOf="@+id/insert_trip_button"
            android:layout_toStartOf="@+id/insert_trip_button"
            android:layout_marginEnd="10dp"
            android:id="@+id/cancel_insert_trip_button"
            fontPath="fonts/Philosopher-Bold.ttf"
            style="@android:style/Widget.Material.Button.Borderless"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:elevation="6dp"
            android:textColor="@android:color/black" />

        <Button
            android:text="@string/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/insert_trip_button"
            style="@android:style/Widget.Material.Button.Borderless"
            android:textColor="?attr/colorPrimary"
            fontPath="fonts/Philosopher-Bold.ttf"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:elevation="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:text="@string/button_leave_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leave_trip_button"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            fontPath="fonts/Philosopher-Bold.ttf"
            android:visibility="visible"
            android:background="@android:color/transparent"
            android:elevation="6dp"
            android:layout_below="@+id/insert_trip_button"
            android:layout_alignParentEnd="true"
            style="@android:style/Widget.Material.Light.Button.Borderless" />
    </RelativeLayout>


</LinearLayout>