<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="14dp"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <TextView
        android:text="@string/time_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_time_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        fontPath="fonts/Philosopher-Bold.ttf"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_time_input_text_view"
        android:layout_below="@+id/detail_time_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <View
        android:id="@+id/divider_view1"
        android:background="@color/divider"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/detail_time_input_text_view"/>

    <TextView
        android:text="@string/origin_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_view1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/detail_origin_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        fontPath="fonts/Philosopher-Bold.ttf"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_origin_input_text_view"
        android:layout_below="@+id/detail_origin_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <View
        android:id="@+id/divider_view2"
        android:background="@color/divider"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/detail_origin_input_text_view"/>

    <TextView
        android:id="@+id/detail_destination_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination_detail"
        android:layout_marginTop="13dp"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/divider_view2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        fontPath="fonts/Philosopher-Bold.ttf"/>

    <TextView
        android:id="@+id/detail_destination_input_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_destination_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <View
        android:id="@+id/divider_view3"
        android:background="@color/divider"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/detail_destination_input_text_view"/>

    <TextView
        android:id="@+id/detail_driver_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_driver"
        android:layout_marginTop="13dp"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/divider_view3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        fontPath="fonts/Philosopher-Bold.ttf"/>

    <TextView
        android:id="@+id/detail_driver_input_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_driver_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <View
        android:id="@+id/divider_view4"
        android:background="@color/divider"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/detail_driver_input_text_view"/>

    <TextView
        android:id="@+id/detail_passenger_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passengers_detail"
        android:layout_marginTop="13dp"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/divider_view4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        fontPath="fonts/Philosopher-Bold.ttf"/>

    <TextView
        android:id="@+id/detail_passenger_input_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_passenger_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <View
        android:id="@+id/divider_view5"
        android:background="@color/divider"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/detail_passenger_input_text_view"/>

    <TextView
        android:id="@+id/detail_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_detail"
        android:layout_marginTop="13dp"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/divider_view5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        fontPath="fonts/Philosopher-Bold.ttf"/>

    <TextView
        android:id="@+id/detail_price_input_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_price_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <View
        android:id="@+id/divider_view6"
        android:background="@color/divider"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/detail_price_input_text_view"/>

    <TextView
        android:text="@string/seats_left_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/seat_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:layout_below="@+id/divider_view6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        fontPath="fonts/Philosopher-Bold.ttf"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seat_view"
        android:id="@+id/detail_capacity_input_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/join_trip_buton"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_below="@+id/detail_capacity_input_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

</RelativeLayout>